[project]
name = "causalspyne"
version = "0.1.5"
description = "hierarchical data generation for causal discovery and abstraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causal-learn>=0.1.4.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
     "pytest>=8.3.4",
     "pytest-cov>=7.0.0",
]
